--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="lessons.html">Lessons</a></li>
             <li><a href="games.html">Games</a></li>
+            <li><a href="references.html">References</a></li>
         </ul>
     </nav>
     <main>
